add: education section 추가
Signed-off-by: 현재 <phyunjae7333@gmail.com>

--- a/src/App.css
+++ b/src/App.css
@@ -299,7 +299,7 @@ section {
 }
 
 .main-section {
-  min-height: 80vh;
+  /*min-height: 80vh;*/
   padding: 2rem 0 3rem 0;
   background: #242424;
 }
