--- a/src/App.css
+++ b/src/App.css
@@ -414,6 +414,52 @@ section {
     gap: 2rem;
     margin-top: 2rem;
 }
+
+.project-card-content {
+    padding: 1.5rem;
+    position: relative; 
+    z-index: 2;
+    color: #f0f0f0;
+    display: flex;
+    flex-direction: column;
+    height: 85%;
+    text-align: left;
+}
+
+.project-card-container {
+    width: 100%; 
+    height: 100%; 
+    min-height: 250px; 
+    background: #2C2040; 
+    border-radius: 12px; 
+    box-shadow: 0 0 15px rgba(124, 58, 237, 0.5), 
+                0 0 30px rgba(124, 58, 237, 0.2); 
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+/* 오버레이 (빛 반사 효과) */
+.project-card-overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    background: linear-gradient(105deg,
+    transparent 40%,
+    rgba(255,255,255,0.8) 45%,
+    rgba(255,255,255,0.4) 50%,
+    transparent 55%,
+    transparent 100%
+    );
+    background-size: 200% 200%; 
+    background-position: 50% 50%;
+    filter: opacity(0); 
+    pointer-events: none;
+}
+
 .project-card {
     position: relative;
     background: #333333; 
